--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Brownlows Bets"
-author: "Your Name"
-date: "Year 2020"
+author: "Alejandra Magdaleno"
+date: "November 12, 2020"
 output: 
   html_document:
     number_sections: true
@@ -16,6 +16,24 @@ require(knitr)
 ```
 ### `r as.character(Sys.Date())`
 
+```{r}
+days=1:365
+saveProfit=vector("numeric")
+for(run in 1:1000){
+  
+
+profit=0
+for(i in 1:637){
+ bdays=sample(days,size=35,replace=TRUE)
+ n=length(unique(bdays))
+ if(n<35){
+   profit=profit=1
+ } else{profit=profit-2}
+}
+saveProfit[run]=profit
+}
+
+```
 
 
 <!-- We recommend you use git branches -- create a separate branch for each major section i.e. Introduction, Methods, Results, Inferential Results, and Discussion and Conclusions - leave the YAML block untouched until the final merge where you put in your own name !-->
