--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -27,7 +27,7 @@ for(i in 1:637){
  bdays=sample(days,size=35,replace=TRUE)
  n=length(unique(bdays))
  if(n<35){
-   profit=profit=1
+   profit=profit+1
  } else{profit=profit-2}
 }
 saveProfit[run]=profit
@@ -35,7 +35,66 @@ saveProfit[run]=profit
 
 ```
 
+```{r}
+hist(saveProfit)
+```
 
+```{r}
+sortProfit=sort(saveProfit)
+print(sortProfit[25])
+print(sortProfit[975])
+```
+The 95% confidence interval shows that the value would range from `r sortProfit[25]` to `r sortProfit[975]`.  The value will continue to change every time the code is run. 
+
+We know that 35 students is the incorrect number of students for 
+
+```{r}
+days=1:365
+saveProfit=vector("numeric")
+for(run in 1:1000){
+  
+
+profit=0
+for(i in 1:637){
+ bdays=sample(days,size=29,replace=TRUE)
+ n=length(unique(bdays))
+ if(n<29){
+   profit=profit+1
+ } else{profit=profit-2}
+}
+saveProfit[run]=profit
+}
+
+```
+
+```{r}
+hist(saveProfit)
+```
+
+Based on the histogram, the number of students in the class for a 2:1 bet would be between 28 to 29 students. 
+
+```{r}
+days=1:365
+saveProfit=vector("numeric")
+for(run in 1:1000){
+  
+
+profit=0
+for(i in 1:637){
+ bdays=sample(days,size=35,replace=TRUE)
+ n=length(unique(bdays))
+ if(n<35){
+   profit=profit+1
+ } else{profit=profit-2}
+}
+saveProfit[run]=profit
+}
+
+```
+
+```{r}
+hist(saveProfit)
+```
 <!-- We recommend you use git branches -- create a separate branch for each major section i.e. Introduction, Methods, Results, Inferential Results, and Discussion and Conclusions - leave the YAML block untouched until the final merge where you put in your own name !-->
 
 # Introduction
