--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -16,6 +16,21 @@ require(knitr)
 ```
 ### `r as.character(Sys.Date())`
 
+<!-- We recommend you use git branches -- create a separate branch for each major section i.e. Introduction, Methods, Results, Inferential Results, and Discussion and Conclusions - leave the YAML block untouched until the final merge where you put in your own name !-->
+
+# Introduction
+
+<!--In this section you explain what you are trying to show.  Where did the data come from?  What is the research or other question you are trying to answer?!-->
+
+ At the first day of class there are 35 students in Math Statistics class and professor Brownlow always proposes this bet to his students "I will wager $2 to your bet of $1 that at least two people in today's class have  the same birthday.  He tells me he has made that bet 637 times so far. Where do you think his profits are? Discuss this in a markdown document
+
+# Methods
+
+<!--Decide on your methods:  In this section explain the approach you will take to attack the issue --- how will you decide on a likely estimate of professor Brownlow's earnings or losses after 637 bets. Also explain how you construct a 95% confidence interval about your estimate of his winnings !-->
+
+
+# Profit Estimate
+
 ```{r}
 days=1:365
 saveProfit=vector("numeric")
@@ -38,15 +53,19 @@ saveProfit[run]=profit
 ```{r}
 hist(saveProfit)
 ```
+<!--Explain and display the results of your method of coming up with the estimate of professor Brownlows betting profits!-->
+
+
+# Confidence interval of Brownlows earning
 
 ```{r}
 sortProfit=sort(saveProfit)
 print(sortProfit[25])
 print(sortProfit[975])
 ```
-The 95% confidence interval shows that the value would range from `r sortProfit[25]` to `r sortProfit[975]`.  The value will continue to change every time the code is run. 
+The 95% confidence interval shows that the value would range from `r sortProfit[25]` to `r sortProfit[975]`.  The value will continue to change every time the code is run.
+<!--Explain and display your method of coming up with a 95% confidence interval of  professor Brownlows winnings (or losings)-->
 
-We know that 35 students is the incorrect number of students for 
 
 ```{r}
 days=1:365
@@ -71,7 +90,7 @@ saveProfit[run]=profit
 hist(saveProfit)
 ```
 
-Based on the histogram, the number of students in the class for a 2:1 bet would be between 28 to 29 students. 
+Based on the histogram, the number of students needed in order to obtain a 2:1 ratio on the bet would be between 28 to 29 students. 
 
 ```{r}
 days=1:365
@@ -96,30 +115,7 @@ saveProfit[run]=profit
 hist(saveProfit)
 ```
 
-The chart shows that in order for this to be a fair bet with 35 students, the payout must be $4.50. 
-
-<!-- We recommend you use git branches -- create a separate branch for each major section i.e. Introduction, Methods, Results, Inferential Results, and Discussion and Conclusions - leave the YAML block untouched until the final merge where you put in your own name !-->
-
-# Introduction
-
-<!--In this section you explain what you are trying to show.  Where did the data come from?  What is the research or other question you are trying to answer?!-->
-
- At the first day of class there are 35 students in Math Statistics class and professor Brownlow always proposes this bet to his students "I will wager $2 to your bet of $1 that at least two people in today's class have  the same birthday.  He tells me he has made that bet 637 times so far. Where do you think his profits are? Discuss this in a markdown document
-
-# Methods
-
-<!--Decide on your methods:  In this section explain the approach you will take to attack the issue --- how will you decide on a likely estimate of professor Brownlow's earnings or losses after 637 bets. Also explain how you construct a 95% confidence interval about your estimate of his winnings !-->
-
-
-# Profit Estimate
-
-<!--Explain and display the results of your method of coming up with the estimate of professor Brownlows betting profits!-->
-
-
-# Confidence interval of Brownlows earning
-
-<!--Explain and display your method of coming up with a 95% confidence interval of  professor Brownlows winnings (or losings)-->
-
+The chart shows that in order for this to be a fair bet with 35 students, the payout needs to be $4.50. 
 
 # Discussion and Conclusion
 
